
<resources>
    <string name="app_name">MAXMaker</string>
    <string name="button_homepage">了解和预定MAX</string>
    <string name="login_text_1">立即登录</string>
    <string name="login_text_2">尊享MAX智慧服务</string>
    <string name="cell_phone_number_text">手机号码</string>
    <string name="verify_code">验证码</string>
    <string name="insert_cellphone">请输入手机号</string>
    <string name="insert_invite_cellphone">请输入手机号</string>
    <string name="insert_verify_code">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="login_certain">我已阅读并同意《MAXMaker用户协议》</string>
    <string name="my_max">我的MAX</string>
    <string name="my_order">我的订单</string>
    <string name="my_invitation_code">我的邀请码</string>
    <string name="my_allowance">我的津贴</string>
    <string name="quit_login">退出登录</string>
    <string name="imme_login">立即登录</string>
    <string name="immediately_pay">立刻支付</string>
    <string name="cancel_order">取消订单</string>
    <string name="del_order">删除订单</string>
    <string name="pay_continue">继续支付</string>
    <string name="canel_reason1">配置或信息填错，重新选择</string>
    <string name="canel_reason2">性能不好，性价比不高</string>
    <string name="canel_reason3">选择了其他新能源车辆</string>
    <string name="canel_reason4">其他</string>
    <string name="cancle_immeiately">立即取消</string>
    <string name="reconsider">我在想想</string>
    <string name="order_price">预订价格</string>
    <string name="order_immediate">立即预订</string>
    <string name="order_info">预订信息</string>
    <string name="name">姓\t\t\t\t名:\t\t\t</string>
    <string name="cell_phone">联系电话:</string>
    <string name="invite_cell_phone">邀请人电话：</string>
    <string name="zone">地\t\t\t\t区:\t\t\t</string>
    <string name="insert_order_name">请填写预订人姓名</string>
    <string name="insert_order_cellphone">请填写手机号码</string>
    <string name="insert_order_zone">点击选择所在地区</string>
    <string name="success_alert">恭喜你支付订金成功</string>
    <string name="order_number">订单编号:\t\t</string>
    <string name="order_time">订单时间:\t\t</string>
    <string name="orders_price">订单价格:\t\t </string>
    <string name="identity_1">我是车主</string>
    <string name="identity_2">我要预约购车</string>
    <string name="identity_3">随便看看</string>
    <string name="take_photo">拍照</string>
    <string name="album">本地相册</string>
    <string name="pay_success_alert">距离超级合伙人只差一步！补齐全额车款获取超级合伙人权益，享受更多优质服务</string>
    <string name="my_allowance_intro">A成功邀请1位车主B，A就会得到6个月的奖励,每月奖励1000元。邀请人数增加，对应月份及金额一并增加。查看详情</string>
    <string name="share_tips">*注：分享台数累计以30个自然日为准，超过30个自然日，完成不同分享台数，对应提成月份递减上档已提月份。</string>
    <string name="partner_text1">全额支付车款25万元</string>
    <string name="partner_text2">享受商务智慧社区的所有权益，获得金钥匙 俱乐部身份（前一万名：包括全国所有6S车馆免费预订权益）</string>
    <string name="partner_text3">按照时间次序享受全球MAXMaker新能源汽车唯一编号，并拥有相同编号的证书和超级合伙人奖杯</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="cancel_order_success">取消订单成功</string>
    <string name="del_order_success">删除订单成功</string>
    <string name="report_reason_1">淫秽色情</string>
    <string name="report_reason_2">违法信息</string>
    <string name="report_reason_3">营销广告</string>
    <string name="report_reason_4">恶意攻击谩骂</string>
    <string name="report_reason_5">其他</string>
    <string name="no_more_data">没有更多内容了</string>
    <string name="questionnaire_intro_text">免责说明：本次调查不作为最终交付服务商品时的标准依据,敬请谅解.</string>

</resources>
