<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="举报原因"
        android:textColor="@color/c666"
        android:textSize="16sp" />

    <com.shosen.max.widget.MultiRadioGroup
        android:id="@+id/rg_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@color/white"
        android:paddingLeft="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_1"
                style="@style/CommonRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/report_reason_1" />

            <RadioButton
                android:id="@+id/rb_2"
                style="@style/CommonRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/report_reason_2" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_3"
                style="@style/CommonRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/report_reason_3" />

            <RadioButton
                android:id="@+id/rb_4"
                style="@style/CommonRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/report_reason_4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_5"
                style="@style/CommonRadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/report_reason_5" />

        </LinearLayout>

    </com.shosen.max.widget.MultiRadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="25dp"
        android:background="@color/diver_color" />


    <TextView
        android:id="@+id/tv_complete"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_weight="4"
        android:background="@color/seleted_text_color"
        android:gravity="center"
        android:text="完成"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>