<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/item_common_header" />

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="27dp"-->
    <!--android:paddingLeft="15dp"-->
    <!--android:paddingRight="15dp"-->
    <!--android:text="@string/login_text_1"-->
    <!--android:textColor="@color/black_text_color"-->
    <!--android:textSize="21sp"-->
    <!--android:visibility="invisible" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:paddingLeft="15dp"-->
    <!--android:paddingRight="15dp"-->
    <!--android:text="@string/login_text_2"-->
    <!--android:textColor="@color/black_text_color"-->
    <!--android:textSize="21sp"-->
    <!--android:visibility="invisible" />-->

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/maxmaker_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/cell_phone_number_text"
        android:textColor="@color/black_text_color"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/ed_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:hint="@string/insert_cellphone"
        android:inputType="phone"
        android:maxLength="11"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/black_text_color"
        android:textColorHint="@color/hint_text_color"
        android:textCursorDrawable="@null"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="15dp"
        android:background="@color/diver_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/verify_code"
        android:textColor="@color/black_text_color"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">


        <EditText
            android:id="@+id/ed_verifycode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/insert_verify_code"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/black_text_color"
            android:textColorHint="@color/hint_text_color"
            android:textCursorDrawable="@null"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_get_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_verify_code"
            android:textColor="@color/get_verify_color"
            android:textSize="15sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="15dp"
        android:background="@color/diver_color" />

    <TextView
        android:id="@+id/tv_user_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="15dp"
        android:drawableLeft="@drawable/selecotor_bg"
        android:drawablePadding="10dp"
        android:text="@string/login_certain"
        android:textColor="@color/c666" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/login_button_bg"
        android:gravity="center"
        android:text="立即登录"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/tv_wechat_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="76dp"
        android:drawableTop="@drawable/wechat_icon"
        android:drawablePadding="14dp"
        android:text="微信登录"
        android:textColor="@color/black_text_color"
        android:textSize="14sp"

        />
</LinearLayout>