<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_color">

    <include
        android:id="@id/rl_top_header"
        layout="@layout/item_common_header"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentTop="true" />

    <include
        layout="@layout/item_order_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_top_header"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp" />

    <LinearLayout
        android:id="@+id/ll_topay"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_cancel_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/cancel_order"
            android:textColor="@color/c666"
            android:textSize="16sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_pay_continue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/seleted_text_color"
            android:gravity="center"
            android:text="@string/pay_continue"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_del_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/del_order"
            android:textColor="@color/c666"
            android:textSize="16sp"
            android:visibility="gone" />


    </LinearLayout>


</RelativeLayout>